VFS-3688 fix pr tasks
